# hastory

./: .gitignore  .hlint.yaml  .pre-commit-config.yaml  .stylish-haskell.yaml  LICENSE  README.md  TODO.smos  ci.nix  default.nix  hastory.cabal  server.logs  shell.nix  stack.yaml  tags  zift.hs
.github/workflows/: nix-build.yml
app/: Main.hs
bench/: Main.hs
hastory/: hastory.cabal
hastory-api/: hastory-api.cabal  package.yaml
hastory-api/src/Hastory/: API.hs
hastory-api/src/Hastory/API/: Gather.hs  Utils.hs
hastory-cli/: hastory-cli.cabal  package.yaml
hastory-cli-data/: hastory-cli-data.cabal  package.yaml
hastory-cli-data/src/Hastory/Cli/: Data.hs
hastory-cli/app/: Main.hs
hastory-cli/bench/: Main.hs
hastory-cli/src/: Import.hs
hastory-cli/src/Hastory/: Cli.hs
hastory-cli/src/Hastory/Cli/: Internal.hs  OptParse.hs  Utils.hs
hastory-cli/src/Hastory/Cli/Commands/: ChangeDir.hs  Gather.hs  GenChangeWrapper.hs  GenGatherWrapper.hs  ListDir.hs  Recent.hs  Register.hs  SuggestAlias.hs  Sync.hs
hastory-cli/src/Hastory/Cli/OptParse/: Types.hs
hastory-cli/test/: TestImport.hs
hastory-cli/test/Hastory/Cli/: OptParseSpec.hs
hastory-cli/test/Hastory/Cli/Commands/: GenGatherWrapperSpec.hs  RegisterSpec.hs  SuggestionSpec.hs  SyncSpec.hs
hastory-cli/test/Hastory/Cli/OptParse/: TypesSpec.hs
hastory-core/: LICENSE  hastory-core.cabal
hastory-core/src/Hastory/: API.hs  Types.hs
hastory-data/: hastory-data.cabal  package.yaml
hastory-data-cli/: hastory-data-cli.cabal  package.yaml
hastory-data-cli/src/Data/Hastory/Types/: Cli.hs
hastory-data-gen/: hastory-data-gen.cabal  package.yaml
hastory-data-gen/bench/: Import.hs  Main.hs
hastory-data-gen/src/: Import.hs
hastory-data-gen/src/Data/Hastory/: Gen.hs
hastory-data-gen/src/Hastory/: Gen.hs
hastory-data-gen/test/: TestImport.hs
hastory-data-gen/test/Data/Hastory/: InstanceSpec.hs
hastory-data-gen/test/Hastory/: InstanceSpec.hs
hastory-data-server/: hastory-data-server.cabal  package.yaml
hastory-data-server/src/Data/Hastory/Types/: Server.hs
hastory-data/src/: Import.hs
hastory-data/src/Data/: Hastory.hs
hastory-data/src/Data/Hastory/: API.hs  Gather.hs  Types.hs  Utils.hs
hastory-data/src/Data/Hastory/Types/: AuthCookie.hs  Path.hs  SyncRequest.hs
hastory-data/src/Hastory/Data/: AuthCookie.hs  Digest.hs  Password.hs  PasswordDifficulty.hs  Path.hs  SyncRequest.hs  UserForm.hs  Username.hs
hastory-data/src/Hastory/Data/Client/: DB.hs
hastory-data/src/Hastory/Data/Server/: DB.hs
hastory-digest/: hastory-digest.cabal  package.yaml
hastory-digest/src/Data/Hastory/Types/: Digest.hs
hastory-path/: hastory-path.cabal  package.yaml
hastory-path/src/Data/Hastory/Types/: Path.hs
hastory-server/: hastory-server.cabal  package.yaml
hastory-server-data/: LICENSE  hastory-server-data.cabal  package.yaml
hastory-server-data/src/Hastory/Server/: Data.hs  Digest.hs
hastory-server-data/src/Hastory/Server/Data/: Password.hs  PasswordDifficulty.hs  UserForm.hs  Username.hs
hastory-server/app/: Main.hs
hastory-server/src/: HastoryServer.hs
hastory-server/src/Data/Hastory/: Server.hs
hastory-server/src/Data/Hastory/Server/: HastoryHandler.hs  TestUtils.hs  Utils.hs
hastory-server/src/Data/Hastory/Server/Handler/: Entries.hs  Import.hs  Sessions.hs  Users.hs
hastory-server/src/Hastory/: Server.hs
hastory-server/src/Hastory/Server/: HastoryHandler.hs  OptParse.hs  TestUtils.hs  Utils.hs
hastory-server/src/Hastory/Server/Handler/: Entries.hs  Import.hs  Sessions.hs  Users.hs
hastory-server/test/Data/Hastory/: ServerSpec.hs
hastory-server/test/Data/Hastory/Handler/: EntriesSpec.hs  SessionsSpec.hs  UsersSpec.hs
hastory-server/test/Hastory/: OptParseSpec.hs
hastory-server/test/Hastory/Handler/: EntriesSpec.hs  SessionsSpec.hs  UsersSpec.hs
hastory-test-utils/: hastory-test-utils.cabal
hastory-test-utils/bench/: Main.hs
hastory-test-utils/src/: TestImport.hs
hastory-test-utils/src/Hastory/: Gen.hs
hastory-test-utils/test/: HastorySpec.hs
hastory/app/: Main.hs
hastory/src/: Hastory.hs  Import.hs
hastory/src/Hastory/: ChangeDir.hs  Gather.hs  GenChangeWrapper.hs  GenGatherWrapper.hs  Internal.hs  ListDir.hs  OptParse.hs  Recent.hs  SuggestAlias.hs  Types.hs  Utils.hs
hastory/src/Hastory/OptParse/: Types.hs
nix/: home-manager-module.nix  module.nix  nixos-module-test.nix  nixos-module.nix  overlay.nix  pkgs.nix  validity-version.nix
scripts/: devel.sh  redo.sh
src/: Hastory.hs  Import.hs
src/Hastory/: ChangeDir.hs  Gather.hs  GenChangeWrapper.hs  GenGatherWrapper.hs  Internal.hs  ListDir.hs  OptParse.hs  Recent.hs  Types.hs
src/Hastory/OptParse/: Types.hs
test/: HastorySpec.hs  TestImport.hs
test/Hastory/: Gen.hs
