name: hastory
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Hastory
        Hastory.Types
        Hastory.OptParse
        Hastory.OptParse.Types
    build-depends:
        base >=4.9 && <=5,
        introduction >= 0.0 && < 0.1,
        optparse-applicative >= 0.12 && < 0.14,
        aeson >= 0.11 && < 1.1,
        bytestring >= 0.10 && < 0.11,
        text >= 1.2 && < 1.3,
        time >= 1.6 && < 1.8
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

executable hastory
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        hastory -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite hastory-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        hastory -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
