name: hastory-server
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: Command Line
author: Tom Sydney Kerckhove

library
    exposed-modules:
        HastoryServer
    build-depends:
        aeson,
        aeson-pretty,
        base,
        bytestring,
        deepseq,
        exceptions,
        hashable,
        hashable-time,
        hostname,
        mtl,
        optparse-applicative,
        path,
        path-io,
        safe,
        text,
        time,
        unix,
        unordered-containers,
        validity,
        validity-path,
        validity-text,
        warp,
        wai,
        http-types,
        servant,
        servant-server,
        optparse-applicative,
        random,
        hastory-core
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

executable hastory-server
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        hastory-server -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
