name: hastory-test-utils
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: Command Line
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Hastory.Gen
        TestImport
    build-depends:
        base >=4.9 && <=5,
        hastory -any,
        genvalidity >= 0.3 && < 0.4,
        genvalidity-hspec >= 0.3 && < 0.4,
        genvalidity-path >= 0.1 && < 0.2,
        genvalidity-text >= 0.3.1 && < 0.4,
        genvalidity-time >= 0.0 && < 0.1,
        genvalidity-hspec-aeson >= 0.0 && < 0.1,
        hspec >= 2.2 && < 2.3,
        validity,
        validity-path,
        validity-text,
        path,
        path-io,
        QuickCheck >= 2.8 && < 2.9
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

test-suite hastory-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        HastorySpec
    build-depends:
        base >=4.9 && <=5,
        hastory -any,
        hastory-test-utils,
        genvalidity >= 0.3 && < 0.4,
        genvalidity-hspec >= 0.3 && < 0.4,
        genvalidity-path >= 0.1 && < 0.2,
        genvalidity-text >= 0.3.1 && < 0.4,
        genvalidity-time >= 0.0 && < 0.1,
        genvalidity-hspec-aeson >= 0.0 && < 0.1,
        hspec >= 2.2 && < 2.3,
        validity,
        validity-path,
        validity-text,
        path,
        path-io,
        QuickCheck >= 2.8 && < 2.9
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

benchmark hastory-bench
  type: exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options:
    -rtsopts
    "-with-rtsopts=-T -M4G"
    -Wall
  build-depends:
    base,
    hastory,
    hastory-test-utils,
    criterion  >= 1.1  && < 1.2,
    silently >= 1.2 && < 1.3,
    QuickCheck,
    path, 
    path-io, 
    mtl
