name: hastory-test-utils
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: Command Line
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Hastory.Gen
        TestImport
    build-depends:
        base >=4.9 && <=5,
        hastory -any,
        genvalidity >=0.3 && <0.4,
        genvalidity-hspec >=0.4 && <0.5,
        genvalidity-path >=0.1 && <0.2,
        genvalidity-text >=0.3.1 && <0.4,
        genvalidity-time >=0.0.0.2 && <0.1,
        genvalidity-hspec-aeson >=0.0 && <0.1,
        hspec >=2.2 && <2.5,
        validity -any,
        validity-path -any,
        validity-text -any,
        path -any,
        path-io -any,
        QuickCheck >=2.8 && <2.10
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

test-suite hastory-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        hastory -any,
        hastory-test-utils -any,
        genvalidity -any,
        genvalidity-hspec -any,
        genvalidity-path -any,
        genvalidity-text -any,
        genvalidity-time -any,
        genvalidity-hspec-aeson -any,
        hspec -any,
        validity -any,
        validity-path -any,
        validity-text -any,
        path -any,
        path-io -any,
        QuickCheck -any,
        safe -any,
        text -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    other-modules:
        HastorySpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

benchmark hastory-bench
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base -any,
        hastory -any,
        hastory-test-utils -any,
        exceptions -any,
        criterion >=1.1 && <1.2,
        silently >=1.2 && <1.3,
        QuickCheck -any,
        path -any,
        path-io -any,
        mtl -any
    default-language: Haskell2010
    hs-source-dirs: bench
    ghc-options: -rtsopts -with-rtsopts=-T -M4G -Wall