name: hastory
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: Command Line
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Hastory
        Hastory.ChangeDir
        Hastory.Gather
        Hastory.GenChangeWrapper
        Hastory.GenGatherWrapper
        Hastory.Internal
        Hastory.ListDir
        Hastory.OptParse
        Hastory.OptParse.Types
        Hastory.Recent
        Hastory.Types
    other-modules:
        Import
    build-depends:
        aeson >= 0.11 && < 1.1,
        aeson-pretty >= 0.8 && < 0.9,
        base >=4.9 && <=5,
        bytestring >= 0.10 && < 0.11,
        deepseq >= 1.4 && < 1.5,
        exceptions >= 0.8 && < 0.9,
        hashable >= 1.2 && < 1.3,
        hashable-time >= 0.2 && < 0.3,
        hostname >= 1.0 && < 1.1,
        mtl >= 2.2 && < 2.3,
        optparse-applicative >= 0.12 && < 0.14,
        path >= 0.5 && < 0.6,
        path-io >= 1.2 && < 1.3,
        safe >= 0.3 && < 0.4,
        text >= 1.2 && < 1.3,
        time >= 1.6 && < 1.8,
        unix >= 2.7 && < 2.8,
        unordered-containers >= 0.2 && < 0.3,
        validity >= 0.3 && < 0.4,
        validity-path >= 0.1 && < 0.2,
        validity-text >= 0.1.2 && < 0.2
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

executable hastory
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        hastory -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
